# 2023chinamcm

./: README.md  pyproject.toml
T1/: T1.ipynb
src/2023chinamcm/T1/: T1.ipynb
src/2023chinamcm/util/: convertEMF.py  main.ipynb
src/2023chinamcm/数据/: 预处理后1-390.xlsx
src/2023chinamcm/数据预处理/: main.ipynb
数据/: 预处理后1-390.xlsx
数据预处理/: main.ipynb
