[project]
name = "2023chinamcm"
version = "0.1.0"
description = ""
authors = [
    {name = "JamesCurtis", email = "jamescurtis@foxmail.com"},
]
dependencies = [
    "openpyxl>=3.1.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scikit-learn>=1.3.0",
    "jupyterlab>=4.0.4",
    "seaborn>=0.12.2",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
